# Athena

./: .env.example  .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build-wheels.yml
docs/: user-manual.md
docs/api/: reference.md
docs/architecture/: workflow-recipes.md
docs/setup/: configuration.md  quickstart.md
examples/: board_bringup_report.py  bw_traffic_logger.py  csr_register_diff.py  eq_coefficient_snapshot.py  error_resilience_matrix.py  fabric_topology_map.py  link_width_rate_audit.py  margin_heatmap.py  multi_gen_ber_comparison.py  overnight_stability_test.py  port_bounce_stress.py  switch_state_checkpoint.py  thermal_bw_correlation.py
scripts/: build_lib.py  setup_msys2.ps1
src/serialcables_switchtec/: __init__.py  exceptions.py  testing.py
src/serialcables_switchtec/api/: __init__.py  app.py  dependencies.py  error_handlers.py  rate_limit.py  state.py
src/serialcables_switchtec/api/routes/: devices.py  diagnostics.py  evcntr.py  events.py  fabric.py  firmware.py  monitor.py  mrpc.py  osa.py  performance.py  ports.py
src/serialcables_switchtec/bindings/: __init__.py  constants.py  functions.py  library.py  types.py
src/serialcables_switchtec/cli/: __init__.py  device.py  diag.py  evcntr.py  events.py  fabric.py  firmware.py  main.py  monitor_format.py  mrpc.py  osa.py  perf.py  recipe.py
src/serialcables_switchtec/core/: __init__.py  device.py  diagnostics.py  error_injection.py  evcntr.py  evcntr_presets.py  events.py  eye_metrics.py  fabric.py  firmware.py  flit.py  ltssm_analyzer.py  ltssm_capture.py  ltssm_graph.py  monitor.py  osa.py  pcie_caps.py  performance.py  safety.py
src/serialcables_switchtec/core/workflows/: __init__.py  all_port_sweep.py  bandwidth_baseline.py  base.py  ber_soak.py  config_dump.py  cross_hair_margin.py  eq_report.py  error_injection_recovery.py  event_counter_baseline.py  export.py  eye_quick_scan.py  ltssm_monitor.py  (+20 more)
src/serialcables_switchtec/models/: __init__.py  device.py  diagnostics.py  eq_validation.py  evcntr.py  events.py  fabric.py  firmware.py  osa.py  performance.py
src/serialcables_switchtec/ui/: __init__.py  layout.py  main.py  state.py  theme.py
src/serialcables_switchtec/utils/: logging.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_cli_csr_aer.py  test_cli_phase6.py  test_cli_phase8.py
tests/integration/: conftest.py  test_api.py  test_api_csr_aer.py  test_api_diagnostics.py  test_api_docs.py  test_api_error_handlers.py  test_api_monitor.py  test_api_phase6.py  test_cli_recipe_integration.py  test_workflow_recipe_integration.py
tests/unit/: test_build_lib.py  test_cli_monitor_format.py  test_cli_recipe.py  test_constants.py  test_cross_hair_thresholds.py  test_dependencies.py  test_device.py  test_diagnostics.py  test_eq_validation.py  test_error_injection.py  test_evcntr.py  test_evcntr_presets.py  test_events.py  test_exceptions.py  test_eye_metrics.py  test_fabric.py  test_firmware.py  test_firmware_models.py  test_firmware_write.py  test_flit.py  test_library_loader.py  test_ltssm_analyzer.py  test_ltssm_capture.py  test_ltssm_graph.py  test_margin_heatmap.py  test_margin_testing_helpers.py  test_models.py  test_monitor.py  test_monitor_metrics.py  test_monitor_state.py  test_osa.py  test_osa_models.py  test_pcie_caps.py  test_perf_api.py  test_perf_cli.py  test_performance.py  test_recipe_export.py  test_report_charts.py  test_report_sections.py  test_safety.py  (+23 more)
(+34 files in other folders)
