[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serialcables-athena"
version = "0.1.0"
description = "Serial Cables Gen6 PCIe Switchtec Host Card Management Interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.1",
    "structlog>=23.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=11.0",
]
ui = [
    "nicegui>=2.0",
]
all = [
    "serialcables-athena[api,ui]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "httpx>=0.24",
]

[project.scripts]
athena = "serialcables_switchtec.cli.main:cli"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/serialcables_switchtec"]
artifacts = [
    "src/serialcables_switchtec/_native/*.dll",
    "src/serialcables_switchtec/_native/*.so",
    "src/serialcables_switchtec/_native/*.so.*",
    "src/serialcables_switchtec/_native/*.dylib",
]

[tool.hatch.build.targets.sdist]
include = ["src/", "resources/switchtec-user-4.4-rc2/", "scripts/", "tests/", "hatch_build.py", "pyproject.toml", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: cross-layer integration tests",
]

[tool.coverage.run]
source = ["src/serialcables_switchtec"]
branch = true
omit = [
    "src/serialcables_switchtec/_native/*",
    "src/serialcables_switchtec/ui/*",
    "src/serialcables_switchtec/bindings/types.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
